--- a/res/layout/cells_list.xml
+++ b/res/layout/cells_list.xml
@@ -20,14 +20,15 @@
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:background="@color/background"
+	android:textSize="14dip">
 	<ListView android:id="@android:id/list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"/>
 	<TextView android:id="@android:id/empty"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:padding="8dip"
-		android:textSize="14dip"
+		android:textColor="@color/text_primary"
 		android:text="@string/no_cells"/>
 </LinearLayout>
