layouts-icons-rssi

--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -19,47 +19,56 @@
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="wrap_content"
+	android:orientation="horizontal"
+	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:background="@color/background"
-	android:padding="4dip">
+	android:background="@color/tertiary"
+	android:padding="8dip">
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:gravity="center_vertical"
+		android:layout_marginRight="8dip"
+		android:src="@drawable/cell"/>
 	<TableLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@drawable/field"
-		android:stretchColumns="0"
-		android:paddingTop="10dip"
-		android:paddingRight="12dip"
-		android:paddingBottom="10dip"
-		android:paddingLeft="12dip">
+		android:stretchColumns="0">
 		<TableRow>
-			<TextView android:textColor="@color/text_secondary"
+			<TextView
+				android:textColor="@color/secondary"
 				android:text="@string/label_CID"/>
-			<TextView android:id="@+id/cell_row_CID"
-				android:textStyle="bold"
-				android:textColor="@color/text_secondary"
+			<TextView
+				android:textColor="@color/secondary"
+				android:id="@+id/cell_row_CID"
 				android:gravity="right"/>
 		</TableRow>
 		<TableRow>
-			<TextView android:textColor="@color/text_secondary"
+			<TextView
+				android:textColor="@color/secondary"
 				android:text="@string/label_LAC"/>
-			<TextView android:id="@+id/cell_row_LAC"
-				android:textColor="@color/text_secondary"
+			<TextView
+				android:textColor="@color/secondary"
+				android:id="@+id/cell_row_LAC"
 				android:gravity="right"/>
 		</TableRow>
 		<TableRow>
-			<TextView android:textColor="@color/text_secondary"
+			<TextView
+				android:textColor="@color/secondary"
 				android:text="@string/range"/>
-			<TextView android:id="@+id/cell_row_range"
-				android:textColor="@color/text_secondary"
+			<TextView
+				android:textColor="@color/secondary"
+				android:id="@+id/cell_row_range"
 				android:gravity="right"/>
 		</TableRow>
 		<TableRow>
-			<TextView android:textColor="@color/text_primary"
+			<TextView
+				android:textColor="@color/primary"
 				android:text="@string/status"/>
-			<TextView android:id="@+id/cell_row_status"
+			<TextView
+				android:id="@+id/cell_row_status"
 				android:textStyle="bold"
-				android:textColor="@color/text_primary"
+				android:textColor="@color/primary"
 				android:gravity="right"/>
 		</TableRow>
 	</TableLayout>
