--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -41,11 +41,13 @@
 		<item>all</item>
 		<item>within area</item>
 		<item>out of area</item>
+		<item>connected</item>
 	</string-array>
 	<string-array name="filter_values">
 		<item>0</item>
 		<item>1</item>
 		<item>2</item>
+		<item>3</item>
 	</string-array>
 	<string-array name="battery_entries">
 		<item>0</item>
