--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -19,6 +19,7 @@
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:background="@drawable/field"
 	android:orientation="horizontal"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
