--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,7 +19,7 @@
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
 <resources>
-	<color name="primary">#d2e2e9</color>
-	<color name="secondary">#a2c2c9</color>
+	<color name="primary">#f2f2f9</color>
+	<color name="secondary">#d2e2e9</color>
 	<color name="tertiary">#427279</color>
 </resources>
