--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -28,4 +28,5 @@
     <string name="key_interval">interval</string>
     <string name="key_battery_override">battery_override</string>
     <string name="key_battery_percentage">battery_percentage</string>
+    <string name="key_manual_override">manual_override</string>
 </resources>
