status-icon-opt-mem-reduce

--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -30,4 +30,5 @@
     <string name="key_battery_percentage">battery_percentage</string>
     <string name="key_manual_override">manual_override</string>
     <string name="key_noclear">noclear</string>
+    <string name="key_persistent_status">persistent_status</string>
 </resources>
