--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -21,11 +21,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/widget" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" android:background="@color/widget_background">
-	<ImageView android:id="@+id/widget_icon" android:scaleType="fitCenter"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:layout_alignParentTop="true" android:padding="4dip" />
-	<TextView android:id="@+id/widget_status" android:singleLine="true"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:textStyle="bold" android:padding="4dip" android:layout_below="@id/widget_icon"
-		android:gravity="center" />
+	<ImageView android:id="@+id/widget_icon" android:scaleType="center"
+		android:layout_width="fill_parent" android:layout_height="fill_parent"/>
 </RelativeLayout>
