--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -75,4 +75,16 @@
 		<item>90</item>
 		<item>100</item>
 	</string-array>
+	<string-array name="wifi_sleep_entries">
+		<item>Always on</item>
+		<item>Always on when in area</item>
+		<item>Always off when screen off</item>
+		<item>Always on when connected and no mobile networks</item>
+	</string-array>
+	<string-array name="wifi_sleep_values">
+		<item>0</item>
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
+	</string-array>
 </resources>
